# CV_Project

./: .gitignore  CMakeLists.txt  README.md  hours.txt
Additional_material/: dataset_creation
data/eight_ball_table/: Table_corners
execution_results/: README.md
include/: ballClassification.h  ballDetection.h  ball_hand_detection.h  homography.h  homography_tracking.h  image_utils.h  performance.h  preProcess.h  tableDetection.h  utils.h
scripts/: build.sh
src/: ballClassification.cpp  ballDetection.cpp  ball_hand_detection.cpp  homography.cpp  homography_main.cpp  homography_tracking.cpp  image_utils.cpp  main.cpp  performance.cpp  performance_main.cpp  preProcess.cpp  tableDetection.cpp  utils.cpp
